--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "pr-cleaner-ai",
-    "version": "1.2.1",
+    "version": "1.2.4",
     "description": "Cursor + GitHub PR cleanup assistant. Local dev tool (install as devDependency).",
     "bin": {
         "pr-cleaner-ai": "dist/index.js"
@@ -12,29 +12,41 @@
         "clean:maps": "find dist -name '*.map' -delete"
     },
     "files": [
+        "bin/",
         "dist/",
         "scripts/",
-        "config/",
+        "config/pr-cleaner-ai.mdc",
         "README.md",
-        "LICENSE"
+        "LICENSE",
+        "CHANGELOG.md",
+        "SECURITY.md",
+        "CODE_OF_CONDUCT.md",
+        "CONTRIBUTING.md"
     ],
     "keywords": [
-        "github",
-        "pr",
-        "pull-request",
-        "comments",
         "cursor",
-        "ai",
-        "code-review",
-        "automation",
-        "pr-comments",
+        "cursor-ai",
+        "github-cli",
+        "gh-cli",
+        "pull-request",
         "github-pr",
-        "code-review-tool",
-        "fix-pr",
-        "pr-fix",
-        "ai-code-review"
+        "pr-comments",
+        "code-review",
+        "review-comments",
+        "code-review-automation",
+        "automation",
+        "developer-tools",
+        "developer-productivity",
+        "devtool",
+        "merge-ready",
+        "pr-cleanup",
+        "github-integration"
     ],
-    "author": "lukasz.jakubowski1993@gmail.com",
+    "author": {
+        "name": "Łukasz Jakubowski",
+        "email": "lukasz.jakubowski1993@gmail.com",
+        "url": "https://github.com/Szesnasty"
+    },
     "license": "MIT",
     "repository": {
         "type": "git",
@@ -44,9 +56,14 @@
         "url": "https://github.com/Szesnasty/pr-cleaner-ai/issues"
     },
     "homepage": "https://github.com/Szesnasty/pr-cleaner-ai#readme",
-    "engines": {
-        "node": ">=16.0.0"
+    "funding": {
+        "type": "github",
+        "url": "https://github.com/sponsors/Szesnasty"
     },
+    "engines": {
+        "node": ">=16"
+    },
+    "sideEffects": false,
     "dependencies": {
         "tsx": "^4.7.0"
     },
@@ -61,5 +78,8 @@
     "devDependencies": {
         "@types/node": "^18.19.130",
         "typescript": "^5.0.0"
+    },
+    "publishConfig": {
+        "provenance": true
     }
 }
